# chuk-mcp-perplexity

./: .gitignore  Makefile  README.md  config.yaml  conftest.py  manifest.in  providers.yaml  pyproject.toml
examples/: debug_perplexity_tools.py  direct_api_test.py
src/chuk_mcp_perplexity/: main.py  models.py  tools.py
tests/: test_perplexity_server.py
