[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chuk-mcp-perplexity"
version = "0.1.11"
description = "MCP Perplexity Server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chuk-llm>=0.1.6",
    "chuk-mcp-runtime>=0.2.3",
    "mcp>=1.6.0",
    "pydantic>=2.11.2",
    "pyyaml>=6.0.2",
]

[project.urls]
"Homepage" = "https://github.com/chrishayuk/chuk-mcp-servers"
"Bug Tracker" = "https://github.com/chrishayuk/chuk-mcp-servers/issues"

[project.scripts]
chuk-mcp-perplexity = "chuk_mcp_perplexity.main:main"
mcp-echo-server = "chuk_mcp_perplexity.main:main"

[dependency-groups]
dev = [
    "pytest-asyncio>=1.0.0",
    "pytest>=8.3.5",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]  # Change from "." to "src"
include = ["chuk_mcp_perplexity*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

[tool.black]
line-length = 88
target-version = ["py311", "py312"]

[tool.isort]
profile = "black"
line_length = 88
